Fixed Subscription Overlap Fixed the subscriptions overlap when resizing to mobile view.

--- a/Club-Ex_Project/clubExProject/static/css/index.css
+++ b/Club-Ex_Project/clubExProject/static/css/index.css
@@ -40,7 +40,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  height: 100vh;
+  min-height: 100vh;
   padding: var(--page-padding);
   background-color: white;
 }
@@ -105,6 +105,7 @@ h2.center-items {
 .header-title a:visited {
   color: white;
 }
+
 
 /* trainers */
 .trainers-container{
